    New command /mmocompat - Shows information about whether or not mcMMO is fully functional or if some features are disabled due to the server software not being fully supported. Can be used by players or console.
    Fixed an exploit involving fishing rods

    Notes:
        There are no features that rely on NMS in this version, it took a lot of work to write the NMS framework and I'm going to delay implementation for future versions.

Version 2.1.125
    *Fixed a bug where you could not place blocks on top of certain repair/salvage anvils

    Notes: You won't be able to place blocks on top of stuff that has an interactable component if its setup as an anvil for either Repair or Salvage, for example if you set the vanilla minecraft anvil to Repair, you won't be able to place blocks on top of that. If the repair anvil is still set to iron block then you can now place blocks on it again.

Version 2.1.124
    Repair/Salvage can now be set to use vanilla blocks that already do something and that vanilla functionality will be disabled by mcMMO (you could use vanilla-anvils instead of iron_blocks for repair now)
    Added Gold_Nugget to Mining's Bonus_Drops in config.yml (edit your config)
    Added Piglin to experience.yml combat XP tables with a value of 2.0 (edit your config)
    Added Hoglin to experience.yml combat XP tables with a value of 4.0 (edit your config)
    Added Zombified_Piglin & Zombie_Pigman to experience.yml combat XP tables with a value of 3.0 (edit your config)

    For this update either edit experience.yml and config.yml manually or delete them to regenerate, keep in mind config.yml has MySQL settings so don't delete it carelessly.


Version 2.1.123
    Added 'Nether_Gold_Ore' to Mining XP tables in experience.yml with a value of 1300
    Adept Salvage message will now show the correct minimum level
    'Weeping_Vines' renamed to 'Weeping_Vines_Plant' in experience.yml (no edits necessary)